--- a/Patient survey/style.css
+++ b/Patient survey/style.css
@@ -3,7 +3,7 @@ body {
   background-color: white;
   font-family: 'HelveticaNeue_Light';
   margin: 0;
-  margin-left: 10px; /* Add margin to the left */
+  color: #7C99AD;
 }
 
 @font-face {
@@ -60,7 +60,6 @@ body {
   right: 10px;
 
 }
-
 @media screen and (max-width: 600px){
 
 
@@ -162,12 +161,14 @@ body {
   width: 90%;
   border-radius: 50px;
   left: 5px;
+  color: #0d1b1c;
 }
 
 .banner1 h1 {
   position: relative;
   left: 10px;
  font-family: 'HelveticaNeue_Light';
+ color: #0d1b1c;
 }
 
 li {
@@ -182,7 +183,6 @@ li {
 
 .banner2 {
   position: relative;
-  color: #000000;
   background-color: #fcbb88;
   width: 90%;
   border-radius: 50px;
@@ -193,11 +193,11 @@ li {
   position: relative;
   left: 10px;
  font-family: 'HelveticaNeue_Light';
+ color: #0d1b1c;
 }
 
 .banner3 {
   position: relative;
-  color: #000000;
   background-color: #0096FF;
   width: 90%;
   border-radius: 50px;
@@ -208,8 +208,22 @@ li {
   position: relative;
   left: 10px;
  font-family: 'HelveticaNeue_Light';
+ color: #0d1b1c;
 }
 
+.banner4 {
+  position: relative;
+  background-color: #f3b064;
+  width: 90%;
+  border-radius: 50px;
+  left: 5px;
+}
+
+.banner4 h1 {
+  position: relative;
+  left: 10px;
+ font-family: 'HelveticaNeue_Light';
+}
 
 /* css for the hidden text box */
 .d-none {
@@ -250,6 +264,8 @@ textarea {
 .form1 {
   position: relative;
   left: 20px;
+  font-family: 'HelveticaNeue_Light';
+ 
 }
 
 .form1 textarea {
@@ -263,6 +279,7 @@ textarea {
 
 .form2 {
   position: relative;
+  font-family: 'HelveticaNeue_Light';
   
 }
 
@@ -278,8 +295,9 @@ textarea {
 
 .form3 {
   position: relative;
-  left: 20px;
-  color: #7C99AD;
+  left: 40px;
+  font-family: 'HelveticaNeue_Light';
+  
 }
 
 .form3 textarea {
@@ -399,7 +417,7 @@ color: white;
 
 .header1 img {
 position: fixed;
-max-width: 80%;  x
+max-width: 80%;  
 height: auto;   
 left: 40px;
 top: 10px;
